# YGN-VM

./: .gitignore  Cargo.toml  YGN_ClaudeCode_Operating_Brief_v2_2026-03-15.md
.claude/: CLAUDE.md  settings.json
.claude/rules/: rust-crypto.md
.github/workflows/: ci.yml
crates/aletheia-cli/: Cargo.toml
crates/aletheia-cli/src/: cmd_capture.rs  cmd_export.rs  cmd_keygen.rs  cmd_seal.rs  cmd_verify.rs  main.rs  paths.rs
crates/aletheia-cli/src/templates/: report.html
crates/aletheia-cli/tests/: e2e.rs
crates/aletheia-core/: Cargo.toml
crates/aletheia-core/src/: chain.rs  error.rs  event.rs  lib.rs  merkle.rs  pack.rs  signing.rs  verify.rs
docs/superpowers/plans/: 2026-03-16-aletheia-proof-mvp.md  2026-03-16-aletheya-landing-stripe.md  2026-03-16-aletheya-v2-crypto-hardening.md
docs/superpowers/specs/: 2026-03-16-aletheia-proof-mvp-design.md  2026-03-16-aletheya-landing-stripe-design.md  2026-03-16-aletheya-v2-crypto-hardening-design.md
