[package]
name = "aletheia-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Aletheia cryptographic evidence packs"
license = "MIT"

[[bin]]
name = "aletheia"
path = "src/main.rs"

[dependencies]
aletheia-core = { path = "../aletheia-core" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
serde_json = "1"
dirs = "6"
