[package]
name = "aletheia-core"
version = "0.1.0"
edition = "2021"
description = "Cryptographic evidence packs for coding-agent compliance"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
uuid = { version = "1", features = ["v7"] }
hex = "0.4"
thiserror = "2"
